Range object should check root node identify instead of inActiveDocument().

https://dom.spec.whatwg.org/#dom-range-ispointinrange

According to the DOM standard, isPointInRange(), comparePoint(), and
intersectNode() should check root identity, not whether the specified node is in
an active document.

Thew new behavior matches to Firefox and Safari.

This CL fixes 1,323 failing tests in imported/wpt/dom/ranges/.

BUG=656459

Review-Url: https://codereview.chromium.org/2416963007
Cr-Commit-Position: refs/heads/master@{#425630}

Former-commit-id: 8a2aa879982c582f811a9d9ef75286b8d27aab84